[package]
name = "dune-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# cli
clap = { version = "4.5", features = ["derive"] }
shlex = "1.3"

# network
ureq = "3.0.0-rc2"

# data
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
polars = "0.44"
faster-hex = "0.10"

# misc
dotenvy = "0.15"
dirs = "5.0.1"